# AIS1003_exam_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.circleci/: config.yml
.github/workflows/: config.yml
data/testing_resources/: testImgCoords.txt
include/: DetectedObjects.hpp  createMesh.tpp  detectedObjects.hpp  enum_Shape.hpp  geoDetection.hpp  geoGeneration.hpp  geoManipulator.hpp  gridManager.hpp  keyHandler.hpp  scenery.hpp  shapeColorHandler.hpp
src/: CMakeLists.txt  detectedObjects.cpp  geoDetection.cpp  geoGeneration.cpp  geoManipulator.cpp  gridManager.cpp  keyHandler.cpp  main.cpp  scenery.cpp  shapeColorHandler.cpp
tests/: CMakeLists.txt  detection_tests.cpp  glfw_required_tests.cpp  grid_tests.cpp  opencv_detection_tests.cpp  tests.cpp
tests/grid/: CMakeLists.txt  grid_tests.cpp
tests/integrated_glfw_tests/: CMakeLists.txt  integrated_glfw_RNDscene.cpp  integrated_glfw_circle.cpp  integrated_glfw_square.cpp
